#11 TantshaRepositoryのテストを実装・TantoshaControllerを実装shi,

--- a/src/main/resources/ValidationMessages_ja.properties
+++ b/src/main/resources/ValidationMessages_ja.properties
@@ -1,5 +1,6 @@
 #共通メッセージ
 javax.validation.constraints.NotNull.message={0}を入力してください。
+javax.validation.constraints.NotBlank.message={0}を入力してください。
 javax.validation.constraints.NotEmpty.message={0}を入力してください。
 javax.validation.constraints.Size.message={0}は{min}文字以上{max}文字以下で入力してください。
 javax.validation.constraints.Min.message="{0}" can not be less than {value}.
